# goeasy-serengeti

./: .env  .gitignore  .travis.yml  404.html  Dockerfile  README.md  deployment.html  dev-requirements.txt  index.html  pyproject.toml  requirements.txt  server.py  setup.py
.github/: dependabot.yml
.github/workflows/: build_docs.yml  docker_deployment.yml  test.yml
app/: __init__.py  config.py  main.py
app/concurrency/: __init__.py  background.py  iot.py  ipt_anonymizer.py  position_authentication.py  user_feed.py
app/internals/: __init__.py  accounting_manager.py  anonymizer.py  iot.py  ipt_anonymizer.py  keycloak.py  logger.py  position_alteration_detection.pyx  session.py  ublox_api.py  user_feed.py
app/internals/sessions/: __init__.py  accounting_manager.py  anonymizer.py  handler.py  ipt_anonymizer.py  ublox_api.py
app/models/: __init__.py  accounting_manager.py  admin.py  model.py  security.py  track.py
app/models/extraction/: __init__.py  data_extraction.py
app/models/galileo/: __init__.py  android_data.py  galileo_auth.py  galileo_status.py  gnss.py  svs.py  ublox_api.py
app/models/iot_feed/: __init__.py  iot.py  links.py  point.py  response_class.py  result.py
app/models/journey/: __init__.py  inspection.py  response_class.py
app/models/user_feed/: __init__.py  behaviour.py  position.py  response_class.py  sensor.py  user.py
app/routers/: __init__.py  administrator.py  iot.py  journey.py  statistics.py  user_feed.py
app/security/: __init__.py  jwt_bearer.py
deployment/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/serengeti/: Administration_API.md  Data_Authentication_API.md  Data_Extraction_API.md  Data_Feeding_API.md  overview.md  (+1 more)
search/: search_index.json
serengeti/: Administration_API.html  Data_Authentication_API.html  Data_Extraction_API.html  Data_Feeding_API.html  Data_Inspection_API.html  overview.html
serengeti/Administration_API/: index.html
serengeti/Data_Authentication_API/: index.html
serengeti/Data_Extraction_API/: index.html
serengeti/Data_Feeding_API/: index.html
serengeti/Data_Inspection_API/: index.html
serengeti/overview/: index.html
tests/: __init__.py  test_app.py
tests/internals/: __init__.py  logger.py  test_accounting_manager.py  test_anonymizer.py  test_ipt_anonymizer.py  test_keycloack.py  test_position_alteration_detection.py  test_ublox_api.py
tests/mock/: __init__.py
tests/models/: __init__.py  constants.py  test_custom_data_types.py
tests/security/: __init__.py  constants.py  model.py  token.py
(+26 files in other folders)
