[tool.poetry]
name = "Serengeti"
version = "0.2.2"
description = "Secure Proxy used to verify user positions"
authors = ["Angelo Cutaia <angeloxx92@hotmail.it>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "0.8.0"
aiologger = "0.6.1"
uvicorn = {extras = ["standard"], version = "0.17.0"}
orjson = "3.6.5"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
gunicorn = "20.1.0"
aiohttp = {extras = ["speedups"], version = "3.8.1"}
fastuuid = "0.7.0"
fastapi = "0.72.0"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "21.12b0"
Cython = "0.29.26"
aioresponses = "0.7.3"
codecov = "2.1.12"
pytest = "6.2.5"
pytest-asyncio = "0.17.2"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
