[tool.poetry]
name = "Serengeti"
version = "0.2.2"
description = "Secure Proxy used to verify user positions"
authors = ["Angelo Cutaia <angeloxx92@hotmail.it>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "22.1.0"
aiologger = "0.7.0"
uvicorn = {extras = ["standard"], version = "0.19.0"}
orjson = "3.8.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
gunicorn = "20.1.0"
aiohttp = {extras = ["speedups"], version = "3.8.3"}
fastuuid = "0.8.0"
fastapi = "0.85.1"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
black = "22.10.0"
Cython = "0.29.32"
aioresponses = "0.7.3"
codecov = "2.1.12"
pytest = "7.2.0"
pytest-asyncio = "0.20.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
